# lookat

./: AUTHORS  ChangeLog  INSTALL  LEESMIJ  Makefile.am  Makefile.in  README  aclocal.m4  bekijk.1  bekijk.c  color.c  color.h  common.h  config.h.in  configfile.c  configfile.h  configure  configure.ac  configure.in  eng.h  get_dir.c  get_dir.h  getline.c  getline.h  input.c  input.h  lookat.1  lookat.conf.default  lookat_configfile.c  lookat_configfile.h  man2txt.sh  menu.c  menu.h  msg.c  msg.h  ncurses_h.h  ned.h  outofmemory.c  outofmemory.h  view.c  (+7 more)
CVS/: Entries  Repository
contrib/: config.sh  cppcheck.sh
contrib/cicd/: config.sh
contrib/debian/: changelog  dirs  files  lookat-viewer.1  lookat.substvars  rules  watch
contrib/debian/lookat/DEBIAN/: conffiles  control  md5sums
contrib/debian/lookat/etc/lookat/: lookat.conf
contrib/debian/lookat/usr/share/doc/lookat/examples/: blue_config.cfg
contrib/scripts/: man2txt.sh
debian/: README.source  bekijk.1  changelog  control  copyright  docs  files  watch
debian/lookat/DEBIAN/: conffiles  control  md5sums
debian/lookat/usr/share/doc/lookat/: README.Debian
debian/patches/: debian-changes-1.4.2rc2-1  series
examples/: cyan_and_blue.cfg
examples/CVS/: Entries  Repository  Root
redhat/: lookat_bekijk.spec
